force-app/main/default/objects/ShipmentMilestone__c/ShipmentMilestone__c.object-meta.xml
<CustomObject>
    <label>Shipment Milestone</label>
    <nameField>
        <displayFormat>MS-{000000000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>