force-app/main/default/objects/ShipmentMilestone__c/fields/DateQualifier__c.field-meta.xml
<CustomField>
    <fullName>DateQualifier__c</fullName>
    <label>Date Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>006</fullName>
                <label>Goods Issue</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Loading</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Transportation Planning</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Outbound Delivery</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Picking</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>Document Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>