force-app/main/default/objects/ShipmentMilestone__c/fields/DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>DestinationCountry__c</fullName>
    <label>Destination Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
                <label>Germany</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>