force-app/main/default/objects/ShipmentMilestone__c/fields/StartTimeZone__c.field-meta.xml
<CustomField>
    <fullName>StartTimeZone__c</fullName>
    <label>Start Time Zone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>